# thumbny

./: .gitignore  README.md  setup.cfg
thumbnails_generator/: __main__.py
thumbnails_generator/abstracts/: __init__.py  command_base.py
thumbnails_generator/arguments_parser/: __init__.py
thumbnails_generator/commands/: __init__.py  create.py  delete.py  generate.py  info.py  set.py  templates.py  unset.py
thumbnails_generator/exceptions/: __init__.py
thumbnails_generator/templates_manager/: __init__.py  file_handler.py  validator.py
thumbny/abstracts/: __init__.py
thumbny/arguments_parser/: __init__.py  create.py  delete.py  generate.py  info.py  templates.py
thumbny/base/: __init__.py  command.py  runner.py  runner_base.py
thumbny/commands/: __init__.py  create.py  delete.py  generate.py  info.py  templates.py
thumbny/models/: __init__.py  create.py  filler.py  generate.py  shared.py  template.py  template_name.py  utils.py
thumbny/models/validation/: __init__.py
thumbny/templates_manager/: __init__.py  file_handler.py  validator.py
