[metadata]
name = thumbnails-generator
version = 0.1
description = Social Thumbnails Generator 
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/maltarouti/thumbnails-generator
author = Murtada Altarouti
author_email = murtada.altarouti@gmail.com
license = MIT
license_files = LICENSE


[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    thumbnails-generator = thumbnails_generator.__main__:main
